# rest

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  config.yaml  sqlx-data.json
.github/workflows/: build-push.yml
configuration/: base.yaml  local.yaml  production.yaml
docker/: migrator.Dockerfile  rest.Dockerfile
migrations/: 20220127230432_create_sales_table.sql  20220406123929_create_nft_tokens_table.sql  20220530161750_create_users_table.sql  20220804131802_create_bids_table.sql  20220804132231_create_asks_table.sql  20220807151339_create_contracts_table.sql
scripts/: entry_point.sh  init_db_cluster.sh  init_db_local_docker.sh
src/: auth.rs  config.rs  domain.rs  error.rs  errors.rs  lib.rs  main.rs  routes.rs  startup.rs  telemetry.rs
src/auth/: middleware.rs  password.rs
src/domain/: ask.rs  bid.rs  limit.rs  mod.rs  nft_token.rs  nft_token_days.rs  nft_token_limit.rs  nft_token_offset.rs  nft_token_token_id.rs  nft_token_user_id.rs  offset.rs  paid.rs  paid_days.rs  paid_limit.rs  paid_offset.rs  sale.rs  sale_days.rs  sale_limit.rs  sale_offset.rs  token_id.rs
src/errors/: ask.rs  auth.rs  bid.rs  contract.rs  is_owner.rs  mod.rs  nft_tokens.rs  paid.rs  sale.rs
src/routes/: asks.rs  bids.rs  contracts.rs  health_check.rs  is_owner.rs  mod.rs  nft_tokens.rs  paid.rs  sale.rs  sales.rs
tests/: dummies.rs  health_check.rs  helpers.rs  insert_nft_token.rs  insert_sale.rs  is_owner.rs  nft_tokens.rs  paid.rs  sales.rs  utils.rs
