[package]
name = "battlemon_rest"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "battlemon_rest"

[dependencies]
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
actix-web = "4.0.0-rc.2"
sqlx = { version = "0.5.13", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline", "decimal", "json"] }
rust_decimal = "1.23.1"
rust_decimal_macros = "1.23.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
config = { version = "0.11.0", default-features = false, features = ["yaml"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.7", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.2"
nft_models = { git = "https://github.com/battlemon-project/contracts" }
[dev-dependencies]
reqwest = { version = "0.11.9", features = ["json"] }
fake = { version = "2.4.3", features = ["uuid", "derive", "chrono"] }
rand = "0.8.5"

[profile.release]
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true