[package]
name = "battlemon_rest"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "battlemon_rest"

[dependencies]
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
actix-web = "4.0.1"
actix-web-lab = "0.16.7"
sqlx = { version = "0.6.0", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "chrono", "migrate", "offline", "decimal", "json"] }
rust_decimal = { version = "1.23.1", features = ["serde-with-str"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
config = { version = "0.13.1", default-features = false, features = ["yaml"] }
chrono = { version = "0.4.19", features = ["serde"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.7", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.2"
tracing-actix-web = "0.6.0"
battlemon_models = { git = "https://github.com/battlemon-project/battlemon_models", features = ["market", "nft", "faker"] }
thiserror = "1.0.31"
anyhow = "1.0.57"
regex = "1.5.5"
base64 = "0.13.0"
secrecy = "0.8.0"
argon2 = { version = "0.4.0", features = ["std"] }
once_cell = "1.13.0"
uuid = { version = "1.1.2", features = ["v4"] }

[dev-dependencies]
rust_decimal_macros = "1.23.1"
reqwest = { version = "0.11.9", features = ["json"] }
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
fake = { version = "2.5.0", features = ["derive", "chrono", "rust_decimal"] }
rand = { version = "0.8.5", features = ["std_rng"] }

[profile.release]
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
